--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -643,6 +643,18 @@ main {
     transform: scale(1.1, 1.1);
 }
 
+.full-desc-logo-brand {
+    display: grid;
+}
+
+.full-desc-logo-brand p {
+    text-align: center;
+    font-size: clamp(18px, 4vw, 22px);
+    font-weight: 700;
+    text-shadow: var(--text-shadown-b-h3);
+}
+
+
 .desc-logo-brand {
     width: 100%;
     padding: 5px 5px;
@@ -651,12 +663,6 @@ main {
     position: relative;
 }
 
-.desc-logo-brand p {
-    text-align: center;
-    font-size: clamp(18px, 4vw, 22px);
-    font-weight: 700;
-    text-shadow: var(--text-shadown-b-h3);
-}
 
 .desc-logo-brand {
     position: relative;
@@ -744,9 +750,9 @@ main {
 .logo-bran-d-17 a,
 .logo-bran-d-18 a,
 .logo-bran-d-19 a,
-.logo-bran-d-20 a{
-position: relative;
-display: inline-block;
+.logo-bran-d-20 a {
+    position: relative;
+    display: inline-block;
 }
 
 .logo-bran-d-1 a::before,
@@ -789,7 +795,7 @@ display: inline-block;
 .logo-bran-d-7 a.hovered::before,
 .logo-bran-d-8 a.hovered::before,
 .logo-bran-d-9 a.hovered::before,
-.logo-bran-d-10 a.hovered::before, 
+.logo-bran-d-10 a.hovered::before,
 .logo-bran-d-11 a.hovered::before,
 .logo-bran-d-12 a.hovered::before,
 .logo-bran-d-13 a.hovered::before,
@@ -799,7 +805,7 @@ display: inline-block;
 .logo-bran-d-17 a.hovered::before,
 .logo-bran-d-18 a.hovered::before,
 .logo-bran-d-19 a.hovered::before,
-.logo-bran-d-20 a.hovered::before{
+.logo-bran-d-20 a.hovered::before {
     width: 100%;
 }
 
@@ -1400,7 +1406,7 @@ display: inline-block;
     .content__page-full-desc {
         display: grid;
     }
-    
+
 
     .content__page-desc-phot {
         float: none;
@@ -1413,7 +1419,7 @@ display: inline-block;
         margin: 5px 10px 15px 10px;
     }
 
-    
+
     #left-menu-1::before,
     #left-menu-2::before,
     #left-menu-3::before,
@@ -1432,19 +1438,19 @@ display: inline-block;
     #left-menu-16::before {
         height: 95px;
         margin-top: -95px;
-        }
-        
-        .content__page-full-logo-brand {
-            grid-template-columns: 1fr;
-        }
-        
-        
-        
-        
+    }
+
+    .content__page-full-logo-brand {
+        grid-template-columns: 1fr;
+    }
 
 
-        
-        .contactbtn-form {
+
+
+
+
+
+    .contactbtn-form {
         max-width: 341px;
         margin: 0 !important;
     }
@@ -1498,6 +1504,8 @@ display: inline-block;
         grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
     }
 
+
+
     .logo-brand {
         width: 110px;
         height: 110px;
@@ -1507,7 +1515,7 @@ display: inline-block;
 
 
 
-    
+
     .costTable tr {
         font-size: 18px;
     }
