--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -655,6 +655,7 @@ import "css/service/style_services.css";
           </div>
 
           <div class="page213-content" id="left-menu-6">
+
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
                 <h2>Cost to Repair a Microwave Depending on the Brand</h2>
@@ -782,155 +783,194 @@ import "css/service/style_services.css";
               <div class="ph-logo-brand">
 
                 <div class="logo-brand logo-bran-ph-1">
-                  <img
-                    width="300px"
-                    height="300px"
-                    src="/brand-logos/panasonic.webp"
-                    alt="Panasonic"
-                  />
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/panasonic.webp"
+                      alt="Panasonic"
+                    />
+                  </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-2">
+                  <a href="#">
                   <img
                     width="370px"
                     height="300px"
                     src="/brand-logos/samsung.webp"
                     alt="samsung"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-3">
+                  <a href="#">
                   <img
                     width="230px"
                     height="300px"
                     src="/brand-logos/GE-general-electric.webp"
                     alt="GE general electric"
                   />
+                </a>
                 </div>
-                
+
                 <div class="logo-brand logo-bran-ph-4">
+                  <a href="#">
                   <img
                     width="240px"
                     height="300px"
                     src="/brand-logos/lg.webp"
                     alt="LG"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-5">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/sharp.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-6">
+                  <a href="#">
                   <img
                     width="300px"
                     height="300px"
                     src="/brand-logos/whirlpool.webp"
                     alt="Whirlpool"
                   />
+                </a>
                 </div>
-                
+
                 <div class="logo-brand logo-bran-ph-7">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/breville.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-8">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/thermador.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-9">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/toshiba.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-10">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/frigidaire.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-11">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/cove.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
                 <div class="logo-brand logo-bran-ph-12">
+                  <a href="#">
                   <img
                     width="290px"
                     height="300px"
                     src="/brand-logos/kitchenAid.webp"
                     alt="Sharp"
                   />
+                </a>
                 </div>
 
               </div>
 
               <div class="full-desc-logo-brand">
                 <p>Brands of microwaves we repair</p>
+
                 <div class="desc-logo-brand logo-bran-d-1">
                   <h3><a href="#">Panasonic</a></h3>
                 </div>
+
                 <div class="desc-logo-brand logo-bran-d-2">
                   <h3><a href="#">Samsung</a></h3>
                 </div>
+
                 <div class="desc-logo-brand logo-bran-d-3">
-                 <h3><a href="#">GE Appliances</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-4">
-                 <h3><a href="#">LG Electronics</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-5">
-                 <h3><a href="#">Sharp</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-6">
-                 <h3><a href="#">Whirlpool</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-7">
-                 <h3><a href="#">Breville</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-8">
-                 <h3><a href="#">Thermador</a></h3>
-               </div>
-               <div class="desc-logo-brand logo-bran-d-9">
-                <h3><a href="#">Toshiba</a></h3>
+                  <h3><a href="#">GE Appliances</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-4">
+                  <h3><a href="#">LG Electronics</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-5">
+                  <h3><a href="#">Sharp</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-6">
+                  <h3><a href="#">Whirlpool</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-7">
+                  <h3><a href="#">Breville</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-8">
+                  <h3><a href="#">Thermador</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-9">
+                  <h3><a href="#">Toshiba</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-10">
+                  <h3><a href="#">Frigidaire</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-11">
+                  <h3><a href="#">Сove</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-12">
+                  <h3><a href="#">KitchenAid</a></h3>
+                </div>
+
               </div>
-              <div class="desc-logo-brand logo-bran-d-10">
-                <h3><a href="#">Frigidaire</a></h3>
-              </div>
-              <div class="desc-logo-brand logo-bran-d-11">
-                <h3><a href="#">Сove</a></h3>
-              </div>
-              <div class="desc-logo-brand logo-bran-d-12">
-                <h3><a href="#">KitchenAid</a></h3>
-              </div>
-              </div>
+
             </div>
+            
             <Btn />
           </div>
 
@@ -2433,8 +2473,4 @@ import "css/service/style_services.css";
   <Focus />
   <Faqs />
 </Layout>
-<LogoBrands/>
-
-
-
-
+<LogoBrands />
