--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -1627,18 +1627,11 @@ import "css/service/style_services.css";
             <div class="content__page-full-desc">
               <div class="content__page-desc">
                 <p>
-                  At Same Day Appliance Repair, we are a family-owned business
-                  committed to enhancing your customer experience.of frustration
-                  that can come with appliance repairs, and we pride ourselves
-                  on our transparency and reliability. This page is designed to
-                  give you a thorough understanding of our pricing policies, the
-                  costs associated with a broken microwave repair, and our
-                  unique approach to service.
+                  At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page is designed to give you a thorough understanding of our pricing policies, the costs associated with a broken washing machine repair, and our unique approach to service.
                 </p>
                 <b>Have Questions? We’re Here to Help!</b>
                 <p>
-                  Feel free to call us with any questions. Our team is dedicated
-                  to assisting you and ensuring your satisfaction.
+                  Feel free to call us with any questions. Our team is dedicated to assisting you and ensuring your satisfaction.
                 </p>
               </div>
             </div>
@@ -1647,25 +1640,14 @@ import "css/service/style_services.css";
           <div class="page213-content" id="left-menu-13">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
-                <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+                <h2>How Much Does It Cost to Repair a Washing Machine?</h2>
               </div>
               <div class="content__page-hed-desc"></div>
             </div>
 
             <div class="content__page-full-desc">
               <div class="content__page-desc">
-                <p>
-                  The typical cost to repair a microwave ranges from <b
-                    >$100 to $600</b
-                  >, including parts and labor. A microwave repair cost can vary
-                  based on the type of issue, as well as the brand and model of
-                  your appliance. To provide you with the most accurate
-                  estimate, our technician will first need to diagnose the
-                  problem. Following the diagnosis, you'll receive a detailed
-                  price breakdown. This not only helps in making an informed
-                  decision about whether to repair your microwave or replace it
-                  but also includes recommendations should you consider a
-                  replacement.
+                <p>The cost of repairing a washing machine can vary depending on the issue type and your appliance's brand and model. Our technician will first need to diagnose the problem to provide you with the most accurate estimate. Following the diagnosis, you'll receive a detailed price breakdown. This helps you decide whether to repair or replace a washing machine and includes recommendations should you consider a replacement.
                 </p>
               </div>
             </div>
@@ -1674,12 +1656,11 @@ import "css/service/style_services.css";
           <div class="page213-content" id="left-menu-14">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
-                <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
+                <h2>Our Pricing Policy For The Washing Machine Repair and How We Work</h2>
               </div>
               <div class="content__page-hed-desc">
                 <p>
-                  There are four costs to consider when it comes to making your
-                  microwave work optimally.
+                  There are four costs to consider when making your washing machine work optimally
                 </p>
               </div>
             </div>
@@ -1729,20 +1710,7 @@ import "css/service/style_services.css";
                       </div>
                       <div class="desc_pricing-policy">
                         <p>
-                          Regular maintenance is essential for your microwave's
-                          longevity and optimal performance. We recommend annual
-                          maintenance, which includes inspecting and cleaning
-                          internal components, checking electrical systems and
-                          door seals, cleaning surfaces, testing functions,
-                          replacing worn parts, and cleaning exhaust vents and
-                          filters. This helps maintain safe and efficient
-                          operation, and we provide personalized recommendations
-                          for continued reliability. Our flat fee for this
-                          comprehensive service is <b>$80</b>. This preventive
-                          approach not only reduces the need for repairs but
-                          also enhances the efficiency and lifespan of your
-                          appliance. Schedule your maintenance appointment with
-                          us today to ensure your microwave runs smoothly.
+                          Regular maintenance is essential for your washing machine's longevity and optimal performance. We recommend annual maintenance, which involves inspecting hoses and connections, cleaning the drum, filter, and detergent dispenser, checking the door seal and water inlet filters, balancing the machine, running a diagnostic test, inspecting electrical components, lubricating moving parts, and listening for unusual noises. This comprehensive service has a flat fee of $80. This preventive approach saves you money by reducing the need for repairs and enhances the efficiency and lifespan of your appliance. Schedule your maintenance appointment with us today to ensure your washing machine runs smoothly.
                         </p>
                       </div>
                     </div>
@@ -1766,19 +1734,7 @@ import "css/service/style_services.css";
                       </div>
                       <div class="desc_pricing-policy">
                         <p>
-                          If your microwave requires a repair, we charge a
-                          service fee of <b>$65</b>, which includes a detailed
-                          price breakdown. This fee is waived if you choose to
-                          proceed with the repair. Unlike some other appliance
-                          repair companies, we do not offer free estimates, but
-                          we guarantee you will not pay this fee if we cannot
-                          diagnose the issue properly. Our technicians are
-                          highly trained and equipped with specialized tools to
-                          accurately diagnose and resolve issues, ensuring
-                          transparency and fairness in our charges. Opting for
-                          professional services ensures access to specialized
-                          knowledge and tools, mitigating the stress and risks
-                          associated with DIY repairs.
+                          If your washing machine requires repair, we charge a service fee of $65, which includes a detailed price breakdown. This fee is waived if you proceed with the repair. We guarantee you will not pay this fee if we cannot diagnose the issue properly. Our technicians are highly trained and equipped with specialized tools to accurately diagnose and resolve issues, ensuring transparency and fairness in our charges. This approach ensures you only pay for necessary repairs.
                         </p>
                       </div>
                     </div>
@@ -1818,17 +1774,7 @@ import "css/service/style_services.css";
                       </div>
                       <div class="desc_pricing-policy">
                         <p>
-                          The cost of labor depends on the complexity of the
-                          repair and the estimated time required. We ensure
-                          transparency by providing a detailed quote before you
-                          commit to the service. Should the repair take longer
-                          than expected, you won’t be charged extra. We waive
-                          the diagnostic fee upon proceeding with the repair,
-                          ensuring no surprises with the total repair costs. Our
-                          appliance repair technicians possess the
-                          qualifications and experience necessary to efficiently
-                          diagnose and fix problems, ensuring your microwave is
-                          in capable hands.
+                          The cost of labor depends on the complexity of the washing machine repair and the estimated time required. We ensure transparency by providing a detailed quote before you commit to the service. Should the repair take longer than expected, you won't be charged extra; we waive the diagnostic fee upon proceeding with the repair, ensuring no surprises on your bill. This commitment to transparency helps build trust and satisfaction with our service.
                         </p>
                       </div>
                     </div>
@@ -1878,30 +1824,18 @@ import "css/service/style_services.css";
                    L204.775,120.721z"
                           ></path>
                         </svg>
-                        <h3>Replacement Parts cost</h3>
+                        <h3>Replacement Parts</h3>
                       </div>
                       <div class="desc_pricing-policy">
                         <p>
-                          While not every repair needs new parts, certain
-                          situations require them to restore your microwave to
-                          peak performance. Our technicians carry a range of
-                          parts in their vehicles, usually enabling same-day
-                          repairs. If a part must be ordered, the cost will vary
-                          depending on the repair, brand, and model of your
-                          microwave. We ensure that any additional costs are
-                          communicated clearly and transparently. This approach
-                          helps in maintaining the efficiency and longevity of
-                          your appliance, ensuring it operates at its best.
+                          While not every repair needs new parts, certain situations require them to restore your washing machine to peak performance. Our technicians carry various parts in their vehicles, which usually enables same-day repairs. If a part must be ordered, the cost will vary depending on your washing machine's brand and model. We strive to ensure the most efficient and cost-effective solution for your repair needs, with a focus on quality and reliability
                         </p>
                       </div>
                     </div>
                   </div>
                   <div class="pros_pricing-policy">
                     <p>
-                      *We always do our best to find parts at a lower price for
-                      our customers. We do not make extra money on the parts,
-                      our priority is to make it as easy as possible for the
-                      customer.
+                      *We always do our best to find parts at a lower price for our customers.  We do not make extra money on the parts; our priority is to make it as easy as possible for the customer. .
                     </p>
                   </div>
                 </div>
