--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -62,70 +62,69 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>MICROWAVE REPAIR</h2>
+              <h2>Whashing machine Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-2">
-              <h2>Microwave oven types and their repair needs</h2>
+              <h2>Types of washers and their repair needs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-3">
-              <h2>Common Microwave Issues</h2>
+              <h2>Common Washer Issues</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-4">
-              <h2>Microwave Parts Explained</h2>
+              <h2>Washing machine parts explained</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-5">
-              <h2>Microwave Replacement Parts Costs</h2>
+              <h2>Washing machine replacement parts costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-6">
-              <h2>Cost to Repair a Microwave Depending on the Brand</h2>
+              <h2>Cost to repair a washing machine depending on the brand</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-7">
-              <h2>Microwave Repair Labor Costs</h2>
+              <h2>Washing Machine Repair Labor Costs</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-8">
-              <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
+              <h2>Washing machine repair cost - labor only, excluding parts</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-9">
-              <h2>Ways to Save Money on Microwave Repair</h2>
+              <h2>Ways to Save Money on Washer Repair</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-10">
               <h2>
-                What is included in regular microwave maintenance and how it can
-                help prevent repairs
+                What is included in Washing Machine maintenance and how it can help prevent repairs
               </h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-11">
-              <h2>How to decide whether to repair of replace a microwave</h2>
+              <h2>How to decide whether to repair or replace a washing machine</h2>
             </a>
           </div>
 
@@ -137,13 +136,13 @@ import "css/service/style_services.css";
 
           <div class="list_left">
             <a href="#left-menu-13">
-              <h2>How Much Does it Cost to Repair a Microwave oven?</h2>
+              <h2>How Much Does It Cost to Repair a Washing Machine?</h2>
             </a>
           </div>
 
           <div class="list_left">
             <a href="#left-menu-14">
-              <h2>Our Pricing Policy For Microwave Repair And How We Work</h2>
+              <h2>Our Pricing Policy For The Washing Machine Repair and How We Work</h2>
             </a>
           </div>
 
@@ -152,6 +151,7 @@ import "css/service/style_services.css";
               <h2>FAQs</h2>
             </a>
           </div>
+
         </div>
 
         <div class="page213-container">
