--- a/src/pages/services/washing-machine-repair.astro
+++ b/src/pages/services/washing-machine-repair.astro
@@ -20,11 +20,12 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full">
+        <div class="page-header-d-full washer-page-header-d-full">
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter"
-                >Whashing machine Repair made easy</span>
+                ><p>Whashing machine</p>
+                <p>Repair</p></span>
             </h1>
             <Contactbtn />
           </div>
@@ -32,7 +33,7 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
-            src="/microwave-repair/page_header_photos.webp"
+            src="/washer-repair/washing-machines-page_header_photos.webp"
             alt="Microwave repair"
             loading="lazy"
           />
