--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -82,6 +82,11 @@ main {
     padding: 10% 0;
 }
 
+.washer-page-header-d-full {
+    padding-top: clamp(5%, 8vh, 10%);
+    padding-bottom: clamp(3%, 5vh, 10%);
+}
+
 .page-header-d {
     left: 0;
     width: 50%;
@@ -1417,6 +1422,11 @@ main {
         padding: 5% 0;
     }
 
+    .washer-page-header-d-full {
+        padding-top: clamp(2%, 2vh, 10%);
+        padding-bottom: clamp(1%, 2vh, 10%);
+    }
+
     .content__page-full-desc {
         display: grid;
     }
@@ -1495,6 +1505,7 @@ main {
         display: grid;
         align-self: center;
         margin: 0 2% 0 2%;
+        text-align: center;
     }
 
     .page-header-d h1 {
