--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -55,11 +55,16 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     </div>
   </div>
 
+
+
+
+
+
   <div class="content-machinery">
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Los Angeles"
-        href="/services/dishwasher-repair">
+        href="/services/washing-machine-repair">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -79,6 +84,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       >
     </div>
   </div>
+
+
+
+
+
+  
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -289,4 +301,80 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       >
     </div>
   </div>
+
+
+
+  <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a title="Wine Cooler Repair in Los Angeles" href="/services/wine-cooler-repair">
+        <div class="f-content-machinery">
+          <img
+            loading="lazy"
+             src="/images/commercial-wine-cooler-freezer-repair.webp"
+             alt="Same day Wine Cooler Repair"
+          />
+        </div>
+
+        <div class="d-content-machinery">
+          <p>Wine Cooler Repair</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="but-content-machinery">
+      <a title="Same day Wine Cooler repair Los Angeles" href="/book">BOOK US</a>
+    </div>
+  </div>
+
+
+  <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a title="Wine Cellar Repair in Los Angeles" href="/services/wine-cellar-repair">
+        <div class="f-content-machinery">
+          <img
+          loading="lazy"
+          src="/images/wine-cellar-reapir.webp"
+          alt="Same day Wine Cellar Repair"
+        />
+        </div>
+
+        <div class="d-content-machinery">
+          <p>Wine Cellar Repair</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="but-content-machinery">
+      <a title="Same day wine cellar repair Los Angeles" href="/book">BOOK US</a
+      >
+    </div>
+  </div>
+
+
+
+  <div class="content-machinery">
+    <div class="content-machinery-f-d">
+      <a title="Induction Cooktop Repair in Los Angeles" href="/services/induction-cooktop-repair">
+        <div class="f-content-machinery">
+          <img
+          loading="lazy"
+          src="/images/wine-cellar-reapir.webp"
+          alt="Same day Induction Cooktop Repair"
+        />
+        </div>
+
+        <div class="d-content-machinery">
+          <p>Induction Cooktop Repair</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="but-content-machinery">
+      <a title="Same day Induction Cooktop Repair Los Angeles" href="/book">BOOK US</a
+      >
+    </div>
+  </div>
+
+
+
 </div>
