--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,10 +14,7 @@ const menuitems = [
     children: [
       { title: "Refrigerator Repair", path: "/services/refrigerator-repair" },
       { title: "Freezer Repair", path: "/services/freezer-repair" },
-      {
-        title: "Washing Machine Repair",
-        path: "/services/washing-machine-repair",
-      },
+      { title: "Washing Machine Repair", path: "/services/washing-machine-repair"},
       { title: "Dryer Repair", path: "/services/dryer-repair" },
       { title: "Stove/Range Repair", path: "/services/stove-repair" },
       { title: "Dishwasher Repair", path: "/services/dishwasher-repair" },
@@ -27,6 +24,9 @@ const menuitems = [
       { title: "Range Hood Repair", path: "/services/range-hood-repair" },
       { title: "Fireplace Repair", path: "/services/fireplace-repair" },
       { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
+      { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
+      { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair" },
+      { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
     ],
   },
   {
